Version 1.1.6 (GitHub, 2018-02-09)
	o Bugfix: In MD-plot the testing against uniform distribution now works also for one feauture.
	o Bugfix: Plot3D checks now that the length of Cls is equal to the number of rows of data.
	o Bugfix: ClassPDEplot did not plot all pdfs for SameKernelsAndRadius=0.
	o Improvement: ClassMDplot now jitters points instead of visualizing pdf if not enough data in class is given.
	
Version 1.1.5 (CRAN, 2018-02-02)
	o Bugfix: The statistical testing in the MD-plot now is omitted if not enough unique values are given in some features. In such a case, only a scatter plot is plotted.
	o Naming Convention: Standardized plotting functions by removing "plot" in names except cases where it is conventional in other sources, e.g. MAplot. Older function names will be removed in the next CRAN version.
						o  plotWorldmap renamed to Worldmap
						o  plotChoroplethMap renamed to Choroplethmap
						o  ClassBoxPlot renamed to ClassBoxplot
						o  fanPlot renamed to Fanplot
						o  pieChart renamed to Piechart
						o  CrossTablePlot renamed to Crosstable
						o  slopeChart renamed to Slopechart
						o  plot3D renamed to Plot3D
						o  InspectScatterOfData renamed to InspectScatterplots
						o  PixelMatrixPlot renamed to Pixelmatrix
						o  ShepardScatterPlot renamed to Sheparddiagram
						o  ShepardDensityPlot renamed to ShepardPDEscatter
						o  DualAxisLineChart renamed to DualaxisLinechart
						o  SilhouettePlot renamed to Silhouetteplot
						o  BoxplotData renamed to InspectBoxplots
						o  QQplotWithFit renamed to QQplot
	o nanPlot is deprecated. The new function is PlotMissingvalues.
	o ClassViolinPlot is deprecated. The new function is ClassMDplot.

Version 1.1.4 (GitHub, 2018-11-17)
	o SignedLog: Allows to transform negativ values with logarithm.
	o Improvement: MD-plot allows for Scaling and Ordering of data and plots scattered points if a column has not enough values to perform density estimation.