@@ -17,6 +17,7 @@ export(InspectScatterplots)
 export(InspectStandardization)
 export(MAplot)
 export(MDplot)
+export(MDplot4multiplevectors)
 export(Pixelmatrix)
 export(Piechart)
 export(PDEplot)
